k8s/03-postgres-cart.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cart
  namespace: ecommerce
spec:
  selector: { app: postgres-cart }
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-cart
  namespace: ecommerce
spec:
  replicas: 1
  selector: { matchLabels: { app: postgres-cart } }
  template:
    metadata: { labels: { app: postgres-cart } }
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports: [{ containerPort: 5432 }]
