k8s/03-postgres-order.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-order
  namespace: ecommerce
spec:
  selector: { app: postgres-order }
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-order
  namespace: ecommerce
spec:
  replicas: 1
  selector: { matchLabels: { app: postgres-order } }
  template:
    metadata: { labels: { app: postgres-order } }
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports: [{ containerPort: 5432 }]
