k8s/03-postgres-payment.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-payment
  namespace: ecommerce
spec:
  selector: { app: postgres-payment }
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-payment
  namespace: ecommerce
spec:
  replicas: 1
  selector: { matchLabels: { app: postgres-payment } }
  template:
    metadata: { labels: { app: postgres-payment } }
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports: [{ containerPort: 5432 }]
