k8s/10-cart.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: ecommerce
spec:
  selector: { app: cart-service }
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
  namespace: ecommerce
spec:
  replicas: 2
  selector: { matchLabels: { app: cart-service } }
  template:
    metadata: { labels: { app: cart-service } }
    spec:
      containers:
        - name: cart-service
          image: donnchadh00/cart-service:latest
          imagePullPolicy: Always
          ports: [{ containerPort: 8080 }]
