k8s/10-inventory.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: ecommerce
spec:
  selector: { app: inventory-service }
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: ecommerce
spec:
  replicas: 1
  selector: { matchLabels: { app: inventory-service } }
  template:
    metadata: { labels: { app: inventory-service } }
    spec:
      containers:
        - name: inventory-service
          image: donnchadh00/inventory-service:latest
          imagePullPolicy: Always
          ports: [{ containerPort: 8080 }]
